@@ -46,6 +46,13 @@ XMLPUBFUN void XMLCALL xmlCheckVersion(int version);
 #define LIBXML_VERSION_STRING "@LIBXML_VERSION_NUMBER@"
 
 /**
+ * LIBXML_VERSION_EXTRA:
+ *
+ * extra version information, used to show a CVS compilation
+ */
+#define LIBXML_VERSION_EXTRA "@LIBXML_VERSION_EXTRA@"
+
+/**
  * LIBXML_TEST_VERSION:
  *
  * Macro to check that the libxml version in use is compatible with
